--- a/main.html
+++ b/main.html
@@ -9,8 +9,8 @@
 
 <body>
 
-	<div class="container-fluid">
-		<h1>Welcome to Sync5</h1>
+	<div class="container-fluid ">
+			<h1 class="px-4">Welcome to Sync5</h1>
 		<div class="container">
 		
 		
